Updated backup and import progress dialogs.